# scribblenotes

./: README.md  pyproject.toml
scribble.egg-info/: PKG-INFO  SOURCES.txt
